SERVER-37686 Wildcard index should not assume non-descending bounds when checking overlap with object type bracket